field trip update

--- a/events.html
+++ b/events.html
@@ -180,6 +180,41 @@
             />
           </div>
           <div class="box box2">
+            <h2>Field Trip: Kumarakom Backwaters</h2>
+            <br /><br />
+            <p>
+              “The world is full of stories,but only travelers get to live them!"
+              <br /><br>
+              Craving a day to refresh your spirit?💫
+              <br /><br />
+              <b>IEEE RAS SBC RIT</b> is all set to unleash the excitement of <b>REX 5.0</b> – are you ready for the ultimate ride?
+              <br /><br>
+              A day of pure bliss in the serene backwaters of Kumarakom, where Kerala's beauty comes alive.🌴✨
+              <br><br>
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> 
+              <br /><br />
+              Book your tickets now for a day of adventure, relaxation, and unforgettable memories!
+            </p>
+          </div>
+          <div class="box box3">
+            <a
+              class="ticket-a"
+              href="https://www.yepdesk.com/rex-5"
+              target="_blank"
+              >Get Tickets</a
+            >
+          </div>
+        </div>
+
+        <div class="bento-grid">
+          <div class="box box1">
+            <img
+              src="./assets/images/workshop1-computervision.jpeg"
+              alt="Image"
+              class="image-fill"
+            />
+          </div>
+          <div class="box box2">
             <h2>Workshop 1: Computer Vision</h2>
             <br /><br />
             <p>
