--- a/index.html
+++ b/index.html
@@ -223,9 +223,21 @@
             </div>
         </section>
 		
-		<div class="bg-robot"></div>	  
+		<div class="bg-robot"></div>
 
-̥
+		<br><br><br><br><br><br><br><br>
+
+		<div class="video-container">
+			<div class="top-backdrop"></div>
+			<video class="video" muted controls>
+				<source src="./assets/video/render.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+			<div class="bottom-backdrop"></div>
+		</div>
+
+		<br><br>
+
         <footer class="footer">
             <div class="footer-awards">
 				<div class="award-item">
