bg-robot update and vid edits

--- a/index.html
+++ b/index.html
@@ -225,11 +225,12 @@
 		
 		<div class="bg-robot"></div>
 
-		<br><br><br><br><br><br><br><br>
+		<br><br>
+		<br><br><br>
 
 		<div class="video-container">
 			<div class="top-backdrop"></div>
-			<video class="video" muted controls>
+			<video class="video" autoplay controls>
 				<source src="./assets/video/render.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
