popup image added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
 				<div class="close-button" id="closeButton"></div>
 			</div>
 		</div>
+
+		<!-- Popup -->
+		<div id="popup" class="popup-container">
+			<div class="popup-content">
+				<span class="close-btn" id="closePopup">&times;</span>
+				<div class="popup-image-container">
+					<img src="./assets/images/earlybird.jfif" alt="Popup Image" class="popup-image">
+				</div>
+				<a href="https://www.yepdesk.com/rex-5" target="_blank">
+					<button class="get-tickets-popup">Get Tickets
+				  	</button>
+				</a>
+			</div>
+		</div>
 		
         <section class="hero-section">
             <div class="hero-content">
