--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="popup-content">
 				<span class="close-btn" id="closePopup">&times;</span>
 				<div class="popup-image-container">
-					<img src="./assets/images/earlybird.jfif" alt="Popup Image" class="popup-image">
+					<img src="./assets/images/offer-tickets.jpeg" alt="Popup Image" class="popup-image">
 				</div>
 				<a href="https://www.yepdesk.com/rex-5" target="_blank">
 					<button class="get-tickets-popup">Get Tickets
