popup content update

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 				<div class="popup-image-container">
 					<img src="./assets/images/offer-tickets.jpeg" alt="Popup Image" class="popup-image">
 				</div>
+				<h2 class="popup-heading" style="color: rgb(77, 75, 75);">Bulk Registration Offer:</h2>
+				<p style="color: #000000d7;">
+					Book <span style="color: green;"><b>5 tickets</b></span> and get a <span style="color: green;"><b>discount of ₹300</b></span> – that's <span style="color: green;"><b>20% off</b></span> your total registration cost!
+					<br>
+					<br>
+				</p>
 				<a href="https://www.yepdesk.com/rex-5" target="_blank">
 					<button class="get-tickets-popup">Get Tickets
 				  	</button>
