--- a/events.html
+++ b/events.html
@@ -183,17 +183,19 @@
             <h2>Field Trip: Kumarakom Backwaters</h2>
             <br /><br />
             <p>
-              “The world is full of stories,but only travelers get to live them!"
-              <br /><br>
+              “The world is full of stories,but only travelers get to live
+              them!"
+              <br /><br />
               Craving a day to refresh your spirit?💫
               <br /><br />
-              <b>IEEE RAS SBC RIT</b> is all set to unleash the excitement of <b>REX 5.0</b> – are you ready for the ultimate ride?
-              <br /><br>
-              A day of pure bliss in the serene backwaters of Kumarakom, where Kerala's beauty comes alive.🌴✨
-              <br><br>
-              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> 
+              <b>IEEE RAS SBC RIT</b> is all set to unleash the excitement of
+              <b>REX 5.0</b> – are you ready for the ultimate ride? <br /><br />
+              A day of pure bliss in the serene backwaters of Kumarakom, where
+              Kerala's beauty comes alive.🌴✨
               <br /><br />
-              Book your tickets now for a day of adventure, relaxation, and unforgettable memories!
+              Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
+              Book your tickets now for a day of adventure, relaxation, and
+              unforgettable memories!
             </p>
           </div>
           <div class="box box3">
@@ -386,6 +388,42 @@
               >Get Tickets</a
             >
           </div>
+        </div>
+      </div>
+
+      <div class="bento-grid">
+        <div class="box box1">
+          <img
+            src="./assets/images/workshop1-computervision.jpeg"
+            alt="Image"
+            class="image-fill"
+          />
+        </div>
+        <div class="box box2">
+          <h2>Cultural Night</h2>
+          <br /><br />
+          <p>
+            Get ready for an evening of Cultural Extravaganza at
+            <b>REX 5.0</b>!💫
+            <br />
+            <br />
+            Join us for an unforgettable night featuring <b>Tritanz x RITM</b>,
+            as they light up the stage with their electrifying performances.
+            <br />
+            Venue:&emsp;<b>RIT Kottayam</b>
+            <br />
+            Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
+            Bring your friends and join us for an evening full of energy and
+            fun!💃
+          </p>
+        </div>
+        <div class="box box3">
+          <a
+            class="ticket-a"
+            href="https://www.yepdesk.com/rex-5"
+            target="_blank"
+            >Get Tickets</a
+          >
         </div>
       </div>
 
