talk session 2 update

--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div class="container magicpattern parent">
+    < class="container magicpattern parent">
       <div id="blob"></div>
 
       <header class="header">
@@ -341,6 +341,7 @@
             >
           </div>
         </div>
+
         <div class="bento-grid">
           <div class="box box1">
             <img
@@ -394,7 +395,53 @@
       <div class="bento-grid">
         <div class="box box1">
           <img
-            src="./assets/images/workshop1-computervision.jpeg"
+            src="./assets/images/robotics-and-ai.jpeg"
+            alt="Image"
+            class="image-fill"
+          />
+        </div>
+
+        <div class="box box2">
+          <h2>Talk Session 2: Introduction to Robotics and AI</h2>
+          <br />
+          <p>
+            "Innovation distinguishes between a leader and a follower."
+            <br />
+            ~Steve Jobs
+            <br />
+            <br />
+            Get ready to dive into a cutting-edge learning journey at <b>REX 5.0</b>, hosted by <b>IEEE RAS SBC RIT</b>.
+            <br />
+            <br />
+            Topic:&emsp;&ensp;<b>Introduction to Robotics and AI</b>
+            <br />
+            Speaker: <b>Abhijith Benny</b>
+            <br />
+            &emsp;&emsp;&emsp;&emsp;Design Engineer (HW),
+            <br />
+            &emsp;&emsp;&emsp;&emsp; Digital Core Technologies Pvt Ltd
+            <br />
+            Venue:&emsp;<b>RIT Kottayam</b>
+            <br />
+            Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> 
+            <br /><br />
+            Don’t miss this opportunity to experience hands-on learning and innovation in robotics. Transform your ideas into reality! ✨
+          </p>
+        </div>
+        <div class="box box3">
+          <a
+            class="ticket-a"
+            href="https://www.yepdesk.com/rex-5"
+            target="_blank"
+            >Get Tickets</a
+          >
+        </div>
+      </div>
+    
+      <div class="bento-grid">
+        <div class="box box1">
+          <img
+            src="./assets/images/cultural night.jpeg"
             alt="Image"
             class="image-fill"
           />
