--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    < class="container magicpattern parent">
+    <div class="container magicpattern parent">
       <div id="blob"></div>
 
       <header class="header">
@@ -410,7 +410,8 @@
             ~Steve Jobs
             <br />
             <br />
-            Get ready to dive into a cutting-edge learning journey at <b>REX 5.0</b>, hosted by <b>IEEE RAS SBC RIT</b>.
+            Get ready to dive into a cutting-edge learning journey at
+            <b>REX 5.0</b>, hosted by <b>IEEE RAS SBC RIT</b>.
             <br />
             <br />
             Topic:&emsp;&ensp;<b>Introduction to Robotics and AI</b>
@@ -423,9 +424,9 @@
             <br />
             Venue:&emsp;<b>RIT Kottayam</b>
             <br />
-            Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> 
-            <br /><br />
-            Don’t miss this opportunity to experience hands-on learning and innovation in robotics. Transform your ideas into reality! ✨
+            Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b> <br /><br />
+            Don’t miss this opportunity to experience hands-on learning and
+            innovation in robotics. Transform your ideas into reality! ✨
           </p>
         </div>
         <div class="box box3">
@@ -437,7 +438,7 @@
           >
         </div>
       </div>
-    
+
       <div class="bento-grid">
         <div class="box box1">
           <img
