--- a/events.html
+++ b/events.html
@@ -475,6 +475,68 @@
         </div>
       </div>
 
+      <div class="bento-grid">
+        <div class="box box1">
+          <img
+            src="./assets/images/ritm.jpeg"
+            alt="Image"
+            class="image-fill"
+          />
+        </div>
+        <div class="box box2">
+          <h2>Cultural Night: RITM</h2>
+          <br /><br />
+          <p>
+            <b>Experience the magic of RITM live at REX 5.0!</b>
+            <br /><br />
+            Get ready for a night of electrifying music and high-energy performances as <b>RITM</b> takes the stage.🪄
+            <br /><br />
+            Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
+            <br /><br />
+            Don’t miss out on this unforgettable cultural extravaganza!✨
+          </p>
+        </div>
+        <div class="box box3">
+          <a
+            class="ticket-a"
+            href="https://www.yepdesk.com/rex-5"
+            target="_blank"
+            >Get Tickets</a
+          >
+        </div>
+      </div>
+
+      <div class="bento-grid">
+        <div class="box box1">
+          <img
+            src="./assets/images/tritanz.jpeg"
+            alt="Image"
+            class="image-fill"
+          />
+        </div>
+        <div class="box box2">
+          <h2>Cultural Night: Tritanz</h2>
+          <br /><br />
+          <p>
+            <b>Brace yourselves for a mesmerizing experience as Tritanz takes the stage for a live performance at REX 5.0! </b>
+            <br /><br />
+            Their dynamic moves and high-energy routines will surely keep you on the edge of your seat.💃
+            <br /><br />
+            Date:&emsp;&ensp;<b>18, 19, 20 October 2024</b>
+            <br /><br />
+            Be there to witness the magic unfold.✨
+          </p>
+        </div>
+        <div class="box box3">
+          <a
+            class="ticket-a"
+            href="https://www.yepdesk.com/rex-5"
+            target="_blank"
+            >Get Tickets</a
+          >
+        </div>
+      </div>
+
       <footer class="footer">
         <div class="footer-left">
           <h3>Stay Updated</h3>
