--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
         <header class="header">
             <a href="index.html"><img src="./assets/images/REX corner logo.png" alt="Corner Logo" class="corner-logo"></a>
-			<!-- <button id="musicToggleButton" class="toggle-button">▶️</button> -->
 			<div class="menu-button" id="menuButton">
 				<span></span>
 				<span></span>
@@ -35,14 +34,14 @@
 					<a href="about.html" class="link-menu"><span class="span-menu">ABOUT</span></a>
 					<a href="gallery.html" class="link-menu"><span class="span-menu">GALLERY</span></a>
 					<a href="events.html" class="link-menu"><span class="span-menu">EVENTS</span></a>
-					<a href="https://www.yepdesk.com/rex-5" class="link-menu" target="_blank"><span class="span-menu">REGISTER</span></a>
+					<!-- <a href="https://www.yepdesk.com/rex-5" class="link-menu" target="_blank"><span class="span-menu">REGISTER</span></a> -->
 				</nav>
 				<div class="close-button" id="closeButton"></div>
 			</div>
 		</div>
 
 		<!-- Popup -->
-		<div id="popup" class="popup-container">
+		<!-- <div id="popup" class="popup-container">
 			<div class="popup-content">
 				<span class="close-btn" id="closePopup">&times;</span>
 				<div class="popup-image-container">
@@ -59,7 +58,7 @@
 				  	</button>
 				</a>
 			</div>
-		</div>
+		</div> -->
 		
         <section class="hero-section">
             <div class="hero-content">
@@ -75,7 +74,7 @@
 					OCT 2024</b>
 				</p>
 				
-                <a href="https://www.yepdesk.com/rex-5" target="_blank">
+                <!-- <a href="https://www.yepdesk.com/rex-5" target="_blank">
 					<button class="get-tickets">Get Tickets
 						<div class="star-1">
 							<svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
@@ -156,10 +155,10 @@
 							</svg>
 						</div>
 				  	</button>
-				</a>
+				</a> -->
 					
 				<a href="./events.html" target="_blank">
-					<button class="ev-button">Checkout our Events
+					<button class="ev-button">Explore our Events
 						<div class="star-1">
 							<svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53"
 								style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
