--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
         <div class='gallery-track'>
           <div class='card'>
             <div class='card-image-wrapper'>
-              <img src='./assets/images/gallery/gal1.jpg'>
+              <img src='./assets/images/gallery/gal1.JPG'>
             </div>
           </div>
           <div class='card'>
