registration link removed + bento box links updated

--- a/events.html
+++ b/events.html
@@ -52,12 +52,6 @@
             <a href="gallery.html" class="link-menu"
               ><span class="span-menu">GALLERY</span></a
             >
-            <!-- <a
-              href="https://www.yepdesk.com/rex-5"
-              class="link-menu"
-              target="_blank"
-              ><span class="span-menu">REGISTER</span></a
-            > -->
           </nav>
           <div class="close-button" id="closeButton"></div>
         </div>
@@ -111,9 +105,9 @@
         <!--  <div class="box box3">-->
         <!--    <a-->
         <!--      class="ticket-a"-->
-        <!--      href="https://www.yepdesk.com/rex-5"-->
+        <!--      href="gallery.html"-->
         <!--      target="_blank"-->
-        <!--      >Get Tickets</a-->
+        <!--      >Explore echoes of the Event</a-->
         <!--    >-->
         <!--  </div>-->
         <!--</div>-->
@@ -163,9 +157,9 @@
         <!--  <div class="box box3">-->
         <!--    <a-->
         <!--      class="ticket-a"-->
-        <!--      href="https://www.yepdesk.com/rex-5"-->
+        <!--      href="gallery.html"-->
         <!--      target="_blank"-->
-        <!--      >Get Tickets</a-->
+        <!--      >Explore echoes of the Event</a-->
         <!--    >-->
         <!--  </div>-->
         <!--</div>-->
@@ -200,9 +194,9 @@
           <div class="box box3">
             <a
               class="ticket-a"
-              href="https://www.yepdesk.com/rex-5"
+              href="gallery.html"
               target="_blank"
-              >Get Tickets</a
+              >Explore echoes of the Event</a
             >
           </div>
         </div>
@@ -245,9 +239,9 @@
           <div class="box box3">
             <a
               class="ticket-a"
-              href="https://www.yepdesk.com/rex-5"
+              href="gallery.html"
               target="_blank"
-              >Get Tickets</a
+              >Explore echoes of the Event</a
             >
           </div>
         </div>
@@ -286,9 +280,9 @@
           <div class="box box3">
             <a
               class="ticket-a"
-              href="https://www.yepdesk.com/rex-5"
+              href="gallery.html"
               target="_blank"
-              >Get Tickets</a
+              >Explore echoes of the Event</a
             >
           </div>
         </div>
@@ -334,9 +328,9 @@
           <div class="box box3">
             <a
               class="ticket-a"
-              href="https://www.yepdesk.com/rex-5"
+              href="gallery.html"
               target="_blank"
-              >Get Tickets</a
+              >Explore echoes of the Event</a
             >
           </div>
         </div>
@@ -383,9 +377,9 @@
           <div class="box box3">
             <a
               class="ticket-a"
-              href="https://www.yepdesk.com/rex-5"
+              href="gallery.html"
               target="_blank"
-              >Get Tickets</a
+              >Explore echoes of the Event</a
             >
           </div>
         </div>
@@ -431,9 +425,9 @@
         <div class="box box3">
           <a
             class="ticket-a"
-            href="https://www.yepdesk.com/rex-5"
+            href="gallery.html"
             target="_blank"
-            >Get Tickets</a
+            >Explore echoes of the Event</a
           >
         </div>
       </div>
@@ -467,9 +461,9 @@
         <div class="box box3">
           <a
             class="ticket-a"
-            href="https://www.yepdesk.com/rex-5"
+            href="gallery.html"
             target="_blank"
-            >Get Tickets</a
+            >Explore echoes of the Event</a
           >
         </div>
       </div>
@@ -498,9 +492,9 @@
         <div class="box box3">
           <a
             class="ticket-a"
-            href="https://www.yepdesk.com/rex-5"
+            href="gallery.html"
             target="_blank"
-            >Get Tickets</a
+            >Explore echoes of the Event</a
           >
         </div>
       </div>
@@ -529,9 +523,9 @@
         <div class="box box3">
           <a
             class="ticket-a"
-            href="https://www.yepdesk.com/rex-5"
+            href="gallery.html"
             target="_blank"
-            >Get Tickets</a
+            >Explore echoes of the Event</a
           >
         </div>
       </div>
